Modified Travis configuration to include JDK 9, 10 and 11 in the build.
Along with that, modified BotContext, because it used a deprecated method for JDK greater than 9.